logo overflow fixed

--- a/app/client/game.css
+++ b/app/client/game.css
@@ -197,7 +197,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  overflow-y: scroll;
+  overflow-y: hidden;
 }
 
 .logo img{
